--- a/Javascript projects/Hex Colors/index.html
+++ b/Javascript projects/Hex Colors/index.html
@@ -12,9 +12,9 @@
     
     <div class="container">
         <div class="hex-colors">
-            <h1>Click the button below to display the hex code to the random color</h1>
+            <h1>Click the button</h1>
 
-            <h2>The hex code of the color is #<span id="hex-code">00000</span></h2>
+            <h2>The hex code is #<span id="hex-code">00000</span></h2>
             <button onclick="changeColor()" type="button" class="btn btn-primary">Click Me</button>
         </div>
     </div>
